# COE2_AR

./: README.md  addon.gproj
Configs/Core/: EditorManagerCore.conf
Configs/Editor/AttributeLists/: Edit.conf
Configs/Map/: COE_MapLocationSelectionMenu.conf
Prefabs/Editor/Modes/: COE_EditorModeSquadLeader.et
Prefabs/Groups/: COE_PlayableGroup.et
Prefabs/MP/Managers/: COE_LoadoutManager.et
Prefabs/MP/Modes/: COE_GameMode.et
Prefabs/Managers/: COE_TaskManager.et
Prefabs/Sounds/Music/: MusicManager_Base.et
Sounds/Music/Ingame/: COE_Music_Ingame.acp
UI/layouts/Map/: COE_LocationElement.layout
addons/COE2/: addon.gproj  manw.gproj
addons/COE2/Language/: COE_localization.cs_cz.conf  COE_localization.de_de.conf  COE_localization.en_us.conf  COE_localization.es_es.conf  (+5 more)
optionals/COE2_Anizay/: addon.gproj
optionals/COE2_Chernarus/: addon.gproj
optionals/COE2_Denali/: addon.gproj
optionals/COE2_Fallujah/: addon.gproj
optionals/COE2_KhanhTrung/: addon.gproj
optionals/COE2_Kunar/: addon.gproj
optionals/COE2_Mogadishu/: addon.gproj
optionals/COE2_Mussalo/: addon.gproj
optionals/COE2_NizlaIsland/: addon.gproj
optionals/COE2_Novka/: addon.gproj
optionals/COE2_RHS_Patch/: addon.gproj
optionals/COE2_Ruha/: addon.gproj
optionals/COE2_SerhiivkaWCS/: addon.gproj
optionals/COE2_WorthyIslands/: addon.gproj
optionals/COE2_Zimnitrita/: addon.gproj
workflow/Arland/: KSC_Slots_Arland.conf  evaluations.ipynb
workflow/libksc/: CMakeLists.txt  pyproject.toml
workflow/libksc/src/: libksc.cpp
workflow/libksc/src/libksc/: __init__.py
(+297 files in other folders)
