[project]
name = "libksc"
version = "0.0.1"
description = ""
#readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Kex"},
]
classifiers = [
    "License :: MIT",
]

[project.urls]
Homepage = ""

[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
